@@ -1,17 +1,17 @@
 package tasks;
 
-import common.Person;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
+
+import common.Person;
 
 /*
 Далее вы увидите код, который специально написан максимально плохо.
@@ -21,78 +21,63 @@ P.P.S Здесь ваши правки необходимо прокоммент
  */
 public class Task9 {
 
-  private long count;
+  public static void main(String[] args) {
+      Task9 tsk = new Task9();
+
+      tsk.listVsSet();
+  }
 
   // Костыль, эластик всегда выдает в топе "фальшивую персону".
   // Конвертируем начиная со второй
+  // сначала мы пропускаем персону заглушку при помощи skip и далее берем имена персон в map, получившееся строки оборачиваем в List
+  // лучше код так как меньший объем и при этом сохранилась читаемость и даже при пустом вхожном списке вернет именно пустой, нет необходимости делать отдельную проверку
   public List<String> getNames(List<Person> persons) {
-    if (persons.size() == 0) {
-      return Collections.emptyList();
-    }
-    persons.remove(0);
-    return persons.stream().map(Person::firstName).collect(Collectors.toList());
+    return persons.stream().skip(1).map(Person::firstName).toList();
   }
 
   // Зачем-то нужны различные имена этих же персон (без учета фальшивой разумеется)
+  // код и так понятен и эффективен
   public Set<String> getDifferentNames(List<Person> persons) {
     return getNames(persons).stream().distinct().collect(Collectors.toSet());
   }
 
   // Тут фронтовая логика, делаем за них работу - склеиваем ФИО
+  // засовываем поля Person в stream после убираем null по фильтру и объединяем в строку с разделителем " " при помощи Collectors.joining()
+  // меньший объем кода, при этом сохранилась надеждность и читаемость
   public String convertPersonToString(Person person) {
-    String result = "";
-    if (person.secondName() != null) {
-      result += person.secondName();
-    }
-
-    if (person.firstName() != null) {
-      result += " " + person.firstName();
-    }
-
-    if (person.secondName() != null) {
-      result += " " + person.secondName();
-    }
-    return result;
+    return Stream.of(person.secondName(), person.firstName(), person.middleName()).filter(Objects::nonNull).collect(Collectors.joining(" "));
   }
 
   // словарь id персоны -> ее имя
+  // более читаемый и в меньшем объёме код, создаем необъодимую Map при помощи Collectors.toMap()
   public Map<Integer, String> getPersonNames(Collection<Person> persons) {
-    Map<Integer, String> map = new HashMap<>(1);
-    for (Person person : persons) {
-      if (!map.containsKey(person.id())) {
-        map.put(person.id(), convertPersonToString(person));
-      }
-    }
-    return map;
+    return persons.stream().collect(Collectors.toMap(Person::id, Person::firstName));
   }
 
   // есть ли совпадающие в двух коллекциях персоны?
+  // из коллекции persons1 запустили stream и проверили чтобы каждый элемент из persons1 находился в persons2
   public boolean hasSamePersons(Collection<Person> persons1, Collection<Person> persons2) {
-    boolean has = false;
-    for (Person person1 : persons1) {
-      for (Person person2 : persons2) {
-        if (person1.equals(person2)) {
-          has = true;
-        }
-      }
-    }
-    return has;
+    return persons1.stream().allMatch(person -> persons2.contains(person)); // AllMatch возвращает true если для всех элементв выполняется данное условие иначе false
   }
 
   // Посчитать число четных чисел
+  // вместо использование счетчика просто вызовем метод count потока для подсчета кол-ва чиседл
   public long countEven(Stream<Integer> numbers) {
-    count = 0;
-    numbers.filter(num -> num % 2 == 0).forEach(num -> count++);
-    return count;
+    return numbers.filter(num -> num % 2 == 0).count();
   }
 
   // Загадка - объясните почему assert тут всегда верен
   // Пояснение в чем соль - мы перетасовали числа, обернули в HashSet, а toString() у него вернул их в сортированном порядке
+  // потому что согласно документации метод hashCode() объектов типа Integer возвращает то значение которое хранится в примитиве данного объекта (то есть само число),
+  // так как метод hashCode() используется для распределения объектов в HashSet по ячейкам внутренней HashMap
+  // то мы видим что числа от 1 до n-го распределяются в соответствующие ячейки от 1 до n-ой соответственно
+  // и при выводе методом toString при помощи итератора поочередно просматриваются ячейки от 1 до n-ой и собираются в строку
   void listVsSet() {
-    List<Integer> integers = IntStream.rangeClosed(1, 10000).boxed().collect(Collectors.toList());
+    List<Integer> integers = IntStream.rangeClosed(1, 10000000).boxed().collect(Collectors.toList());
     List<Integer> snapshot = new ArrayList<>(integers);
-    Collections.shuffle(integers);
     Set<Integer> set = new HashSet<>(integers);
+    System.out.println("Хеш-коды объектов Integer:");
+    snapshot.stream().forEach(number -> System.out.println(number + " " + number.hashCode()));
     assert snapshot.toString().equals(set.toString());
   }
 }
